--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "gulp-sass": "^2.0.4",
     "gulp-tsc": "^1.1.5",
     "gulp-typescript": "^2.10.0",
+    "tslint": "^3.14.0",
     "typescript": "^1.7.5"
   }
 }
